--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 /*First Page - animation & layout*/
 #firstPage {
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0U4miGkN9Mx82C30s9tQ995G1bA8ajriccLgj8pgY2GfFZlZOfQ);
+    background-image: url(https://mediacdn.bellacor.com/images/500/238801CU25955.jpg);
     background-size: cover;
     height: 100vh;
     width: 100vw;
@@ -102,6 +102,26 @@
     position: absolute;
     top: 3%;
     left: 3%;
+    padding:20px;
+  }
+
+  .circle3Font{
+    font-family: 'Gochi Hand', cursive;
+    font-size: 60px;
+    top:40%;
+    color:black;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 250px; 
+  }
+  .circle2Font{
+    font-family: 'Gochi Hand', cursive;
+    font-size: 50px;
+    top:40%;
+    color:black;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 200px; 
   }
   
   @keyframes pulse {
@@ -131,7 +151,7 @@
   }
   
   .content {
-    padding: 16px;
+    padding: 20px;
   }
   
   .sticky {
@@ -144,6 +164,7 @@
   .sticky + .content {
     padding-top: 102px;
   }
+
 
 #home, #about, #projects, #contacts{
     padding:20px;
@@ -159,5 +180,74 @@
 
 #portfolio{
     padding:20px;
+
+}
+
+@media only screen and (max-width: 640px) {
+  *{
+      overflow:auto;
+  }
+
+
+  .container1 {
+    height: 500px;
+    border-radius:50%;
+    position: relative;
+    top: 3%;
+    left: 3%;
+      animation-name: pulse;
+      animation-duration: 10s;	
+      animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    box-shadow: inset 0 0 0 7px #F6D856; 
+    z-index: 1;
+
+  }
+  .circle1 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background:#A7C5DF;
+    position: absolute;
+    top: 3%;
+    left: 3%;
+    padding-left:10px;
+    padding-right:15px;
+    padding-top:150px;
+    padding-bottom: 150px;
+  }
+
+  .navigation {
+    background:#A7C5DF;
+    color: #f1f1f1;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 16px;
+    height: 60px;
+    padding-right:5px;
+    padding-top:10px;
+    border-bottom: 3px solid #A59FCF;
+    margin-bottom: 3px solid #F6D856 ;
+  }
+  
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+  }
+  
+  .sticky + .content {
+    padding-top: 102px;
+  }
+
+  .content {
+    padding: 5px;
+
+  }
+
+
+
+
 
 }
