--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,20 @@
 /*First Page - animation & layout*/
-#firstPage {
+.firstPage {
     background-image: url(https://mediacdn.bellacor.com/images/500/238801CU25955.jpg);
     background-size: cover;
     height: 100vh;
     width: 100vw;
   }
 
+  #logo{
+    text-align:center;
+    margin-top:10%;
+    font-family: 'Gochi Hand', cursive;
+    font-size:25vh;
+    color:#A7C5DF;
+    text-shadow:2px 8px #A59FCF ;
+    opacity:0.4;
+  }
   /*Animation and content of container1 (name)*/
   
   .blink {
@@ -45,7 +54,7 @@
       animation-iteration-count: infinite;
     animation-timing-function: linear;
     box-shadow: inset 0 0 0 7px #F6D856; 
-    z-index: 1;
+    z-index:5;
 
   }
   .circle1 {
@@ -68,7 +77,7 @@
       animation-iteration-count: infinite;
     animation-timing-function: linear;
     box-shadow: inset 5px 0 0 0 #A7C5DF ; 
-    z-index: -1;
+    z-index:5;
     text-align:center;
   }
   .circle2 {
@@ -91,7 +100,7 @@
       animation-iteration-count: infinite;
     animation-timing-function: linear;
     box-shadow: inset 5px 0 5px 2px #A59FCF ; 
-    z-index: -1;
+    z-index:5;
     text-align:center;
   }
   .circle3 {
@@ -141,14 +150,15 @@
     background:#A7C5DF;
     color: #f1f1f1;
     text-align: center;
-    font-family: sans-serif;
-    font-size: 20px;
+    font-family: 'Gochi Hand', cursive;
+    font-size: 28px;
     height: 80px;
     padding-right:20px;
     padding-top:20px;
     border-bottom: 3px solid #A59FCF;
     margin-bottom: 3px solid #F6D856 ;
   }
+
   
   .content {
     padding: 20px;
@@ -182,6 +192,61 @@
     padding:20px;
 
 }
+
+ /* otherPages */
+.backWrap{
+  text-align:right!important;
+ }
+.back{
+  position: absolute;
+  right:0;
+  z-index:5;
+  height: 180px;
+  border-radius: 60%;
+
+    animation-name: pulse;
+    animation-duration: 20s;	
+    animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  box-shadow: inset 5px 0 5px 2px #A59FCF ; 
+  text-align:center;
+}
+
+.circle3Font{
+  font-family: 'Gochi Hand', cursive;
+  font-size: 60px;
+  top:40%;
+  color:black;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 180px; 
+}
+
+#bodyContent{
+  text-align:center;
+  max-width:60vw;
+}
+#title{
+  font-family: 'Gochi Hand', cursive;
+}
+#content{
+  margin-top:5%;
+  text-align:justify;
+  font-size:16px;
+}
+#about, #content1{
+  border-top:solid 25px #A7C5DF;
+}
+.sns{
+  padding:20px;
+  font-size:50px; 
+  color:black;
+}
+.sns:hover{
+  opacity:0.4;
+  transform: scale(1.2);
+}
+
 
 @media only screen and (max-width: 640px) {
   *{
@@ -246,6 +311,7 @@
 
   }
 
+ 
 
 
 
